--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -12,10 +12,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21'
       
       - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.53.3
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
       
       # go.work makes it necessary to find go.mod files to run linter in the corresponding dirs
       - name: Run golangci-lint
@@ -46,13 +46,30 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21'
+
+      - name: Ensure dependencies synced & tidy
+        working-directory: ./go
+        run: |
+          go work sync
+          pushd tdh2
+          go mod tidy
+          popd
+          pushd ocr2/decryptionplugin
+          go mod tidy
+          popd
+          git diff --minimal --exit-code
 
       - name: Build and test OCR2 plugin
         working-directory: ./go/ocr2/decryptionplugin
         run: |
           go build -v ./...
           go test -v ./... -coverpkg=./... -coverprofile=ocr2_decryptionplugin_coverage.txt
+
+      - name: Race test OCR2 plugin
+        working-directory: ./go/ocr2/decryptionplugin
+        run: |
+          go test -race -v ./... -coverpkg=./... -coverprofile=ocr2_decryptionplugin_race_coverage.txt
 
       - name: Download npm deps
         working-directory: ./js/tdh2
@@ -63,6 +80,11 @@ jobs:
         run: |
           go build -v ./...
           go test -v ./... -coverpkg=./... -coverprofile=tdh_coverage.txt
+      
+      - name: Race test TDH2
+        working-directory: ./go/tdh2
+        run: |
+          go test -race -v ./... -coverpkg=./... -coverprofile=tdh_race_coverage.txt
 
       - name: Upload Go test reports
         if: always()
@@ -71,7 +93,9 @@ jobs:
           name: go-test-results
           path: |
             ./go/ocr2/decryptionplugin/ocr2_decryptionplugin_coverage.txt
+            ./go/ocr2/decryptionplugin/ocr2_decryptionplugin_race_coverage.txt
             ./go/tdh2/tdh_coverage.txt
+            ./go/tdh2/tdh_race_coverage.txt
 
 
   sonar-scan:
@@ -104,7 +128,7 @@ jobs:
           echo "sonarqube_golangci_report_paths=$(find -type f -name 'golangci-lint-report.xml' -printf "%p,")" >> $GITHUB_OUTPUT
       
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@v1.2.0
+        uses: sonarsource/sonarqube-scan-action@69c1a75940dec6249b86dace6b630d3a2ae9d2a7 # v2.0.1
         with:
           args: >
             -Dsonar.go.coverage.reportPaths=${{ steps.sonarqube_report_paths.outputs.sonarqube_coverage_report_paths }}
@@ -112,4 +136,3 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      
